# axum-sqlx-repository-pattern

./: .gitignore  Cargo.toml  Dockerfile  README.md  SPA-Auth-Flow.md  compose.yml  cool-resources.txt  database.db  database.db-shm  database.db-wal
.sqlx/: query-afa153793cdf496730e6ff555482739653d0b7aa3966a57dbd62ae3940cfe6cc.json  query-bdcc446b712871b2ffbacb8d92e04ca5c8fb6bb0f55ae925aec699dd2a06da08.json
migrations/: 20251202164031_create_devices_table.down.sql  20251202164031_create_devices_table.up.sql
src/: main.rs
src/app/: mod.rs
src/app/authentication/: controller.rs  mod.rs
src/app/devices/: controller.rs  errors.rs  mod.rs  model.rs  repository.rs  routes.rs  schemas.rs  service.rs
src/app/middleware/: compression.rs  cors.rs  mod.rs  tracer.rs
src/errors/: mod.rs
src/logs/: mod.rs
src/repo/: mod.rs
