[package]
name = "axum-sqlx-repository-pattern"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace", "compression-full", "cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
